--- a/index.html
+++ b/index.html
@@ -6,22 +6,22 @@
     <link href="resources\css\style.css" type="text/css" rel="stylesheet"/>
   </head>
   <body>
-    <div>
+    <div class="hero">
       <h1>Broadway Design</h1>
       <p>
-       <a href="#">Home</a>
+       <a class="nav" href="#">Home</a>
       </p>
       <p>
-       <a href="#process">Process</a>
+       <a class="nav" href="#process">Process</a>
       </p>
       <p>
-       <a href="#work">Work</a>
+       <a class="nav" href="#work">Work</a>
       </p>
       <p>
-       <a href="#team">Team</a>
+       <a class="nav" href="#team">Team</a>
       </p>
       <p>
-       <a href="#contact">Contact</a>
+       <a class="nav" href="#contact">Contact</a>
       </p>
     </div>
     <div>
@@ -36,7 +36,7 @@
       <h3>Execute</h3>
       <p>We put everything we have into our work.</p>
     </div>
-    <div>
+    <div class="hero">
       <h2>Designated in New York</h2>
     </div>
     <div id="work">
@@ -56,11 +56,11 @@
     <div class="footer">
       <p>
         &copy;Broadway 2017
-        <a href="#">Home</a>
-        <a href="#about">About</a>
-        <a href="#work">Work</a>
-        <a href="#team">Team</a>
-        <a href="#contact">Contact</a>
+        <a class="nav" href="#">Home</a>
+        <a class="nav" href="#about">About</a>
+        <a class="nav" href="#work">Work</a>
+        <a class="nav" href="#team">Team</a>
+        <a class="nav" href="#contact">Contact</a>
       </p>
     </div>
   </body>
