--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         <a class="nav" href="#team">Team</a>
         <a class="nav" href="#contact">Contact</a>
       </p>
+      <p>Test</p>
     </div>
   </body>
 </html>
